2006-08-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.man: Bumped to version 4.3.1
	* comm.tcl:
	* pkgIndex.tcl:

	* comm.tcl: Implemented the new options -interp and -events,
	* comm.test: extended the testsuite to cover them. Created
	  utility/helper command for the execution of hook scripts, and
	  rewrote all hook places to use it.

2006-08-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.man: Documented an easier use of slave interpreters
	  (-interp, -events).

2006-08-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.test:      Moved startup and cleanup of slave process
	* comm.slaveboot: into a separate file.

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.test: Fixed cleanup of temp. files.

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.test: Hooked into the new common test support code.

2006-01-10  Andreas Kupries <andreask@activestate.com>

	* comm.test: Fixed [SF Tcllib Bug 1316033]. Uncluttering test
	  output.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-03  Andreas Kupries <andreask@activestate.com>

	* comm.tcl: Accepted [SF Tcllib Bug 1006282], which is actually an
	* comm.man: RFE. Comm channels are extended with an option which
	            allows the user to force the server side to silently
		    ignore connection attempts where the protocol
		    negotiation with the other side failed.

2005-03-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm_wire.man: Added documentation for the wire protocol run by
	  comm internally.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 
